--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -191,6 +191,7 @@ p {
   @media (max-width: 740px) {
     .box_member-contact p {
       text-align: center;
+      line-height: 2em;
     }
   }
 }
