[www.topmonks.com] Fixed clashes of SVG icons

--- a/www.topmonks.com/src/stylesheets/hp/how-we-work.scss
+++ b/www.topmonks.com/src/stylesheets/hp/how-we-work.scss
@@ -37,14 +37,16 @@
   }
 
   .box {
-    padding-top: 2em; //32px
+    padding-top: 2em;
     z-index: 15;
     position: relative;
     display: grid;
 
-    & > svg {
+    .box__icon {
       margin: 0 auto;
-      height: 140px;
+      svg {
+        height: 140px;
+      }
     }
 
     h3 {
