[www.topmonks.com] Improved rel-preconnect

--- a/www.topmonks.com/src/html/layouts/topmonks.njk
+++ b/www.topmonks.com/src/html/layouts/topmonks.njk
@@ -12,9 +12,11 @@
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
   <link rel="preconnect" href="https://use.typekit.net">
   <link rel="preconnect" href="https://p.typekit.net">
-  <link rel="preconnect" href="https://cdn.jsdelivr.net">
-  <link rel="preconnect" href="https://www.google-analytics.com">
-  <link rel="preconnect" href="https://static.hotjar.com">
+  <link rel="preconnect" href="https://www.google-analytics.com" crossorigin>
+  <link rel="preconnect" href="https://www.google.com" crossorigin>
+  <link rel="preconnect" href="https://www.google-analytics.com" crossorigin>
+  <link rel="preconnect" href="https://stats.g.doubleclick.net" crossorigin>
+  <link rel="preconnect" href="https://static.hotjar.com" crossorigin>
   {% block preconnect %}{% endblock %}
   <link rel="preload" as="font" crossorigin type="font/woff2" href="https://use.typekit.net/af/c4c302/000000000000000000012192/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3">
   <link rel="preload" as="font" crossorigin type="font/woff2" href="https://use.typekit.net/af/50d55e/000000000000000000015235/27/l?primer=c1dc6aaaeb08b96bfd12c2815a4029c5914ffa8710f31ed55abeb350dac39c99&fvd=n9&v=3">
