--- a/www.topmonks.com/src/html/macros/helpers.njk
+++ b/www.topmonks.com/src/html/macros/helpers.njk
@@ -9,7 +9,7 @@
 {% endmacro %}
 
 {% macro css(stylesheet) -%}
-<link rel="stylesheet" href="{{ '/assets/css/components/' ~ stylesheet ~ '/index.css' }}">
+<link rel="stylesheet" href="{{ '/assets/css/' ~ stylesheet ~ '.css' }}">
 {%- endmacro %}
 
 {% macro avatar(member, imageSize) -%}
