[CircleCI] Prefix LHCI Github status url with site name

--- a/www.topmonks.com/src/stylesheets/hp/testimonials.scss
+++ b/www.topmonks.com/src/stylesheets/hp/testimonials.scss
@@ -1,7 +1,7 @@
 .testimonials {
   text-align: center;
   background: #fff
-    url("https://res.cloudinary.com/topmonks/image/upload/f_auto/v1550567115/topmonks.com/bgnd_grey.png")
+    url("https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto/v1550567115/topmonks.com/bgnd_grey.png")
     center top no-repeat;
 
   @media screen and (min-width: 840px) {
