--- a/www.topmonks.com/src/stylesheets/hp/funnel.scss
+++ b/www.topmonks.com/src/stylesheets/hp/funnel.scss
@@ -1,25 +1,29 @@
 .product {
   @media (max-width: 479px) {
-    background: url("/assets/img/bgnd_funnel_product_mobile.svg") bottom center no-repeat;
+    background: url("/assets/img/bgnd_funnel_product_mobile.svg") bottom center
+      no-repeat;
     background-size: 100% auto;
     padding-bottom: 110px;
     .tm-bgnd-wrapper {
-      background: url("/assets/img/bgnd_funnel_mobile.svg") top center
-        no-repeat;
+      background: url("/assets/img/bgnd_funnel_mobile.svg") top center no-repeat;
       padding-top: 110px;
       background-size: 100% auto;
       margin: 0 calc(var(--mdc-layout-grid-gutter-phone) * -1);
     }
   }
   @media screen and (min-width: 840px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/w_903,dpr_auto,q_auto,f_auto/v1553775999/topmonks.com/bgnd_funnel.png")
+    background: cloudinaryUrl("topmonks.com/bgnd_funnel.png", $width: 903)
       no-repeat left calc(50% - 500px) top 230px;
     background-size: 903px auto;
   }
   @media screen and (min-width: 840px) and (min-device-pixel-ratio: 2),
     screen and (min-width: 840px) and (min-resolution: 192dpi),
     screen and (min-width: 840px) and (min-resolution: 2dppx) {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_903,dpr_2,q_auto,f_auto/v1553775999/topmonks.com/bgnd_funnel.png");
+    background-image: cloudinaryUrl(
+      "topmonks.com/bgnd_funnel.png",
+      $width: 903,
+      $dpr: 2
+    );
   }
 
   .steps {
@@ -30,8 +34,8 @@
       padding-left: calc(25% - 37px);
       padding-top: 150px;
       padding-bottom: 50px;
-      background: url("/assets/img/bgnd_funnel_product.svg") left calc(25% - 22px)
-          bottom no-repeat,
+      background: url("/assets/img/bgnd_funnel_product.svg") left
+          calc(25% - 22px) bottom no-repeat,
         url("/assets/img/bgnd_funnel.svg") left calc(25% - 22px) top no-repeat;
     }
     @media screen and (min-width: 840px) {
